# ki_build_prerequisites

grep-2.24/: Makefile.in  aclocal.m4  config.hin  configure
grep-2.24/doc/: Makefile.in  stamp-vti
grep-2.24/gnulib-tests/: Makefile.in
grep-2.24/lib/: Makefile.in  gnulib.mk
grep-2.24/m4/: gnulib-comp.m4
grep-2.24/po/: af.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  grep.pot  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ky.po  lt.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  (+4 more)
grep-2.24/src/: Makefile.in
grep-2.24/tests/: Makefile.in
termutils-2.0/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  bsearch.c  config.h.in  configure  configure.in  conversions.c  fgetline.c  fspec.c  fspec.def  fspec.sh  tabs.c  tabs.h  tcutil.c  tcutil.h  tput.c  tput.h  tput.info  tput.texi
