dnl Process this file with autoconf to produce a configure script.
AC_INIT(tput.c)
AC_CONFIG_HEADER(config.h)
AC_ARG_PROGRAM
AC_SUBST(ALLOCA) dnl Bogus thing for automake.

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h termios.h sgtty.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIGNAL

dnl Checks for library functions.
AC_CHECK_FUNCS(tcgetattr strerror)
AC_REPLACE_FUNCS(bsearch)

AC_OUTPUT(Makefile)
